<resources>
    <string name="facebook_app_id">308870061304393</string> <string name="fb_login_protocol_scheme">fb473625777492322</string>
    <string name="contact_email">simonediberardino.bus@gmail.com</string>
    <string name="credits">© Copyright 2022, Simone Di Berardino</string>
    <string-array name="stato">
        <item>Lieve</item>
        <item>Media</item>
        <item>Grave</item>
        <item>Estremamente grave</item>
    </string-array>

    <string-array name="camera_options">
        <item>Carica una nuova immagine</item>
        <item>Ripristina immagine</item>
    </string-array>
    <string-array name="maptheme">
        <item>Classico</item>
        <item>Satellite</item>
    </string-array>

    <string-array name="yesno">
        <item>Sì</item>
        <item>No</item>
    </string-array>
    <string name="top_sheet_behavior" translatable="false">com.github.techisfun.android.topsheet.TopSheetBehavior</string>
    <string name="app_name">Strada Sicura</string>
    <string name="title_activity_maps">Strade Sicure</string>
    <string name="anomalie_trovate">Anomalie stradali trovate: {number}</string>
    <string name="anomalie_vicine">Anomalie stradali nelle vicinanze</string>
    <string name="ruolo">Ruolo</string>
    <string name="mostra_di_più"><u>Mostra di più</u></string>
    <string name="segnala_anomalia">Segnala anomalia</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="indirizzo_dot">• Luogo: {indirizzo}</string>
    <string name="segnalata_da">• Segnalazione di: {username}</string>
    <string name="indicazioni">• Indicazioni: {indicazioni}</string>
    <string name="distance">• Distanza: {distance}</string>
    <string name="info">Di più</string>
    <string name="refresh_in">Refresh in: {time}</string>
    <string name="request_permissions">Questa app ha bisogno della tua geolocalizzazione per poter funzionare correttamente.</string>
    <string name="conferma">Conferma</string>
    <string name="aggiungi_marker">Indica sulla mappa la posizione precisa dell\'anomalia</string>
    <string name="aggiungi_marker_tut">Per segnalare una posizione tieni premuto sulla mappa sul punto desiderato.</string>
    <string name="tua_posizione">La tua posizione attuale</string>
    <string name="descrizione">Breve descrizione</string>
    <string name="stato">Stato</string>
    <string name="gravita">Gravità</string>
    <string name="mappa">Mappa</string>
    <string name="ripristina_immagine_conferma">Sei sicuro di voler ripristinare l\'immagine?</string>
    <string name="azione_non_reversibile">L\'azione non è reversibile.</string>
    <string name="modifica_immagine">Modifica immagine</string>
    <string name="errore">Errore</string>
    <string name="mie_segnalazioni">Le mie segnalazioni</string>
    <string name="tutte_segnalazioni">Tutte le segnalazioni</string>
    <string name="segnalazioni">Segnalazioni</string>
    <string name="apri_nav">Apri menu</string>
    <string name="chiudi_nav">Chiudi menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_mappa">Mappa</string>
    <string name="menu_cerca">Cerca</string>
    <string name="menu_account">Mio profilo</string>
    <string name="menu_credits">Crediti</string>
    <string name="menu_contattaci">Contattaci</string>
    <string name="menu_impostazioni">Impostazioni</string>
    <string name="annulla">Annulla</string>
    <string name="logout_confirm">Sei sicuro di volerti disconnettere?</string>
    <string name="account_eliminato">Account eliminato</string>
    <string name="anomalia_non_visitata">Devi visitare questa anomalia almeno una volta durante questa sessione per poter eliminarla.</string>
    <string name="ok">OK</string>
    <string name="email">Email</string>
    <string name="email_id">Email / ID Utente</string>
    <string name="login_error">Impossibile effettuare l\'accesso.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="oppure">Oppure</string>
    <string name="contatta">Contatta</string>
    <string name="sconosciuto">Sconosciuto</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="haigiaaccount">Hai già un account?</string>
    <string name="nonhaiaccount">Non hai un account?</string>
    <string name="emailnotvalid">Email non valida</string>
    <string name="caricamento">Caricamento…</string>
    <string name="caricamento_immagine">Caricamento immagine</string>
    <string name="progress">Avanzamento: {progress}</string>
    <string name="recensioni">Recensioni</string>
    <string name="mapstyle">Stile mappa</string>
    <string name="introActivity_defaultBackButtonText" override="true">INDIETRO</string>
    <string name="introActivity_defaultNextButtonText">SALTA</string>
    <string name="introActivity_defaultFinalButtonText">FATTO</string>
    <string name="realtimeupdate">Aggiornamento anomalie in tempo reale</string>
    <string name="intro_1_title">Benvenuto a Strada Sicura!</string>
    <string name="intro_1_desc">Strada Sicura è un\'applicazione, gestita dalla community, che permette la segnalazione di anomalie stradali in tempo reale.\nCosa significa? Significa che ogni utente può segnalare i problemi stradali della propria città in ogni momento e che più segnalazioni verranno effettuate, più l\'applicazione sarà affidabile e più verrà garantita un\'esperienza positiva a tutti gli utenti. Contribuisci anche tu!</string>
    <string name="intro_2_title">Sfrutta al massimo l\'applicazione!</string>
    <string name="intro_2_desc">Per sfruttare al massimo le potenzialità di questa applicazione è necessario che abiliti la geolocalizzazione e che ti registri con un account: potrai farlo nel menu principale successivamente.\nQuesta applicazione richiede l\'accesso alla geolocalizzazione per funzionare correttamente. La geolocalizzazione è utilizzata per mostrare le anomalie stradali nelle vicinanze e per poter effettuare le segnalazioni. I dati relativi alla geolocalizzazione non rimangono memorizzati nel sistema e non vengono condivisi.</string>
    <string name="intro_3_title">Un\'ultima cosa…</string>
    <string name="intro_3_desc">Questa applicazione è stata sviluppata da Simone Di Berardino, studente di Latina. Trovi una sezione dedicata ai contatti nel menu a sinistra successivamente.</string>
    <string name="anomalies_filter">Solo anomalie nella tua città</string>
    <string name="accountid">ID Account</string>
    <string name="logout">Logout</string>
    <string name="anomalia_in_range">Attenzione! Anomalia di gravità {value} in {via} nel raggio di {meters} metri.</string>
    <string name="logout_success">Disconnesso con successo!</string>
    <string name="register_success">Registrato correttamente!</string>
    <string name="indietro">Indietro</string>
    <string name="googlestreet">Google Street</string>
    <string name="recensione">Recensione</string>
    <string name="rimuovi">Rimuovi</string>
    <string name="account_inesistente"/>
    <string name="no_email_app">Hai bisogno di un client per email per utilizzare questa funzione.</string>
    <string name="erroreprofilocredenziali">Sei stato disconnesso: le credenziali del tuo profilo non sono più valide.</string>
    <string name="citynotfound">Città sconosciuta</string>
    <string name="login_success">Login effettuato correttamente!</string>
    <string name="login_description">Effettua il login e sblocca tutte le funzionalità dell\'app</string>
    <string name="logout_description">Disconnetti il tuo profilo da Strada Sicura</string>
    <string name="nonloggato">Devi effettuare l\'accesso per utilizzare questa funzionalità.</string>
    <string name="credenzialierrate">Credenziali errate, riprova.</string>
    <string name="emailgiaregistrata">Questa email è già stata registrata.</string>
    <string name="posizionenontrovata">Posizione non trovata</string>
    <string name="nameinvalidlength">Il tuo nome deve essere lungo almeno {length} caratteri.</string>
    <string name="nessunaanomalia">Impossibile trovare anomalie.</string>
    <string name="surnameinvalidlength">Il tuo cognome deve essere lungo almeno {length} caratteri.</string>
    <string name="noimagewarn">Non hai impostato una foto profilo, vuoi continuare lo stesso?</string>
    <string name="dialog_conferma_eliminazione_title">Sei sicuro di voler rimuovere questa segnalazione?</string>
    <string name="ban_warning">Ricorda che l\'abuso di questa funzionalità causerà un ban permanente dall\'applicazione.</string>
    <string name="dialog_conferma_anomalia_title">Sei sicuro di voler segnalare questa anomalia?</string>
    <string name="connessione_persa">La tua connessione internet è al momento inattiva e non potrai utilizzare tutte le funzionalità di questa app.</string>
    <string name="cancella_account">Cancella account</string>
    <string name="cancella_account_description">Cancella definitivamente il tuo account da Strada Sicura</string>
    <string name="cancella_account_successo">Account eliminato con successo</string>
    <string name="cancella_account_confirm">Sei sicuro di voler eliminare il tuo account? L\'azione è irreversibile.</string>
</resources>