<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background_gradient"
    android:padding="8dp">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="600px"
        android:layout_height="100px"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColorHint="@color/silver"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="0dp"
        android:layout_height="100px"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="@color/silver"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="@+id/login_email_et"
        app:layout_constraintStart_toStartOf="@+id/login_email_et"
        app:layout_constraintTop_toBottomOf="@+id/login_email_et" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_login_button"
        android:layout_width="650px"
        android:layout_height="110px"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_register_button">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/pink_background"
            android:gravity="center">

            <TextView
                android:id="@+id/login_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="45px" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/login_login_button"
        app:layout_constraintStart_toStartOf="@+id/login_login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_or_text" />

    <TextView
        android:id="@+id/login_or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/oppure"
        android:textColor="@color/silver"
        android:textSize="35px"
        app:layout_constraintEnd_toEndOf="@+id/login_login_button"
        app:layout_constraintStart_toStartOf="@+id/login_login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_login_button" />

    <TextView
        android:id="@+id/login_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nonhaiaccount"
        android:textColor="@color/silver"
        android:textSize="35px"
        app:layout_constraintEnd_toEndOf="@+id/login_password_et"
        app:layout_constraintStart_toStartOf="@+id/login_password_et"
        app:layout_constraintTop_toBottomOf="@+id/login_password_et" />
</androidx.constraintlayout.widget.ConstraintLayout>