<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/single_anomaly_circle"
        android:layout_width="25px"
        android:layout_height="25px"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_circle" />

    <TextView
        android:id="@+id/single_anomaly_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/indirizzo"
        android:textColor="@color/darkgrey"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="@+id/single_anomaly_circle"
        app:layout_constraintStart_toEndOf="@+id/single_anomaly_circle"
        app:layout_constraintTop_toTopOf="@+id/single_anomaly_circle" />

    <TextView
        android:id="@+id/single_anomaly_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Data"
        android:textColor="@color/darkgrey"
        android:textSize="35px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/single_anomaly_title" />

    <TextView
        android:id="@+id/single_anomaly_reporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/segnalata_da"
        android:textColor="@color/lightgrey"
        android:textSize="35px"
        app:layout_constraintStart_toStartOf="@+id/single_anomaly_title"
        app:layout_constraintTop_toBottomOf="@+id/single_anomaly_title" />

    <TextView
        android:id="@+id/single_anomaly_indications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicazioni"
        android:textColor="@color/lightgrey"
        android:textSize="35px"
        app:layout_constraintStart_toStartOf="@+id/single_anomaly_title"
        app:layout_constraintTop_toBottomOf="@+id/single_anomaly_reporter" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/single_anomaly_circle"
        app:layout_constraintStart_toStartOf="@+id/single_anomaly_circle"
        app:layout_constraintTop_toBottomOf="@+id/single_anomaly_circle" />
</androidx.constraintlayout.widget.ConstraintLayout>