<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_top_black"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="32dp"
    app:layout_constraintCircleRadius="10dp">

    <ImageView
        android:id="@+id/anomaly_more_swiper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/swiper" />

    <ImageButton
        android:id="@+id/anomaly_more_remove_btn"
        android:layout_width="140px"
        android:layout_height="140px"

        android:background="@drawable/red_circle"
        android:elevation="28dp"
        android:src="@drawable/ic_baseline_remove_circle_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/anomaly_more_review_btn"
        app:layout_constraintTop_toTopOf="@+id/anomaly_more_review_btn" />

    <ImageButton
        android:id="@+id/anomaly_more_map_btn"
        android:layout_width="140px"
        android:layout_height="140px"

        android:background="@drawable/white_circle"
        android:elevation="28dp"
        android:src="@drawable/ic_baseline_map_24"
        app:layout_constraintEnd_toStartOf="@+id/anomaly_more_review_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/anomaly_more_review_btn" />

    <ImageButton
        android:id="@+id/anomaly_more_review_btn"
        android:layout_width="140px"
        android:layout_height="140px"

        android:layout_marginTop="24dp"
        android:background="@drawable/white_circle"
        android:elevation="28dp"
        android:src="@drawable/ic_baseline_comment_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anomaly_more_swiper" />

    <TextView
        android:id="@+id/anomaly_more_map_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/googlestreet"
        android:textColor="@color/white"
        android:textSize="35px"
        app:layout_constraintEnd_toEndOf="@+id/anomaly_more_map_btn"
        app:layout_constraintStart_toStartOf="@+id/anomaly_more_map_btn"
        app:layout_constraintTop_toBottomOf="@+id/anomaly_more_map_btn" />

    <TextView
        android:id="@+id/anomaly_more_review_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recensione"
        android:textColor="@color/white"
        android:textSize="35px"
        app:layout_constraintEnd_toEndOf="@+id/anomaly_more_review_btn"
        app:layout_constraintStart_toStartOf="@+id/anomaly_more_review_btn"
        app:layout_constraintTop_toBottomOf="@+id/anomaly_more_review_btn" />

    <TextView
        android:id="@+id/anomaly_more_remove_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rimuovi"
        android:textColor="@color/red"
        android:textSize="35px"
        app:layout_constraintEnd_toEndOf="@+id/anomaly_more_remove_btn"
        app:layout_constraintStart_toStartOf="@+id/anomaly_more_remove_btn"
        app:layout_constraintTop_toBottomOf="@+id/anomaly_more_remove_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>